<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="wu_endpoint_url">http://api.wunderground.com</string>

    <string name="loading_conditions">Loading current conditions for %s</string>
    <string name="current_temp">Temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="current_conditions_error">Error retrieving current conditions. Please try again later.</string>
    <string name="conditions_header">Current conditions for</string>
    <string name="feels_like">Feels Like</string>
</resources>
