<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"
        tools:context=".CurrentConditionsFragment">

        <TextView android:id="@+id/loading_message"
            style="@style/Heading"
            android:text="@string/loading_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <RelativeLayout
            android:id="@+id/conditions_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/heading"
                style="@style/SmallNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/conditions_header"/>

            <TextView
                android:id="@+id/location_name"
                style="@style/Heading"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/conditions_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_name"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin" >
                <TextView
                    android:id="@+id/conditions"
                    style="@style/DisplayValue"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/conditions_image"
                    android:layout_width="@dimen/current_conditions_icon_width"
                    android:layout_height="@dimen/current_conditions_icon_height" />

            </LinearLayout>

            <TextView
                android:id="@+id/current_temp_label"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/conditions_block"
                android:text="@string/current_temp"/>
            <TextView
                android:id="@+id/current_temp"
                style="@style/DisplayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/current_temp_label"
                android:layout_toRightOf="@+id/current_temp_label"
                android:layout_below="@+id/conditions_block" />

            <TextView
                android:id="@+id/humidity_label"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/current_temp_label"
                android:text="@string/humidity"/>
            <TextView
                android:id="@+id/humidity"
                style="@style/DisplayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/humidity_label"
                android:layout_toRightOf="@+id/humidity_label"
                android:layout_below="@+id/current_temp" />

            <TextView
                android:id="@+id/wind_label"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/humidity_label"
                android:text="@string/wind"/>
            <TextView
                android:id="@+id/wind_speed"
                style="@style/DisplayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/wind_label"
                android:layout_toRightOf="@+id/wind_label"
                android:layout_below="@+id/humidity" />

            <TextView
                android:id="@+id/feels_like_label"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/wind_speed"
                android:text="@string/feels_like"/>
            <TextView
                android:id="@+id/feels_like"
                style="@style/DisplayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/feels_like_label"
                android:layout_toRightOf="@+id/feels_like_label"
                android:layout_below="@+id/wind_speed" />

            <TextView
                android:id="@+id/observation_time"
                style="@style/SmallNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/feels_like" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>